Still thinking through `HandshakeResult` and how it should interact with current Soklet flow